Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-20063

Browse for folder: Edit name leads to "Assertion failed: !_ILIsSpecialFolder(pidl)"

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.16
    • Shell
    • None

    Description

      reactos-bootcd-0.4.16-dev-925-g090d563-x86-gcc-lin-dbg

      • Start menu > Search
      • Location comboboxEx > Browse
      • while the Browse for Folder dialog is displayed leave mouse over "My Computer" to enter edit mode (or any folder under Desktop)
      • Assertion failed: !_ILIsSpecialFolder(pidl)

      err:(dll/win32/shell32/folders/CDesktopFolder.cpp:734) Got an unknown pidl type!!!
      err:(dll/win32/shell32/folders/CDesktopFolder.cpp:734) Got an unknown pidl type!!!
      err:(dll/win32/shell32/folders/CDesktopFolder.cpp:734) Got an unknown pidl type!!!*** Assertion failed: !_ILIsSpecialFolder(pidl)
      ***   Source File: /srv/buildbot/worker_data/Build_GCCLin_x86/build/dll/win32/shell32/folders/CDesktopFolder.cpp, line 316Break repeatedly, break Once, Ignore, terminate Process or terminate Thread (boipt)?
      kdb:> b
      Execute '.cxr 01CEAD84' to dump context
      err:(win32ss/user/user32/windows/message.c:1556) Exception Dialog unicode 7AF2E84A Msg 5393 pti B3FC8028 Wndpti B3FC8028 

      Attachments

        Activity

          People

            whindsaks whindsaks
            KRosUser KRosUser
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: