[BROWSEUI] Don't pass the internal PIDL to the shell for processing (#7859)

CORE-20063